--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  
   text-align: center;
+  margin-top: 0;
 }
 
 .logo {
@@ -40,3 +41,45 @@
 .read-the-docs {
   color: #888;
 }
+
+
+/* Ajustar Header si usás posición fija 
+header {
+  margin-top: 35px;
+}*/
+
+
+
+body {
+  margin: 0;
+  padding-top: 0;
+}
+
+html, body, #root, #root > div {
+  height: 100%;
+  width: 100%;
+}
+
+div {
+  overflow: visible;
+}
+
+
+
+/*.section-adbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 35px;
+  background-color: #fbdbeb;
+  color: #000;
+  text-align: center;
+  line-height: 35px;
+  z-index: 1000; ⬆ más alto que el header */
+
+
+
+
+
+
