--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,11 +1,11 @@
 .product-item {
-  background-color: #1e1e1e; /* Gris más claro que el fondo */
-  border: 1px solid #333;
-  border-radius: 0.5rem;
+  background-color: #ffffff; /* Gris más claro que el fondo */
+  
+  
   padding: 1rem;
   max-width: 15.625rem; /* 250px */
-  color: #f5f5f5;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
+  color:#cbb080;
+  
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   margin-bottom: 15px;
 }
@@ -18,7 +18,7 @@
 
 .product-item:hover {
   transform: translateY(-3px);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
+  box-shadow: 0 4px 12px #cbb080;
 }
 
 .product-item a {
@@ -34,7 +34,7 @@
 .product-title {
   font-size: 1.1rem;
   font-weight: bold;
-  color: #ffcc66;
+  color:#cbb080;
 }
 
 .product-actions {
@@ -46,5 +46,3 @@
 .product-actions .btn .btn-add {
   margin: 1rem;
 }
-
-
