--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,5 +1,5 @@
 nav ul li a {
-  color: white;
+  color: #cbb080;
   text-decoration: none;
   font-weight: bold;
 }
@@ -9,7 +9,7 @@ nav ul li a:hover {
 }
 
 .in-cart {
-  background-color: rgb(242, 127, 127);
+  background-color: #cbb080;
   font-size: 0.75rem;
   font-weight: bold;
   color: white;
