--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   
   text-align: center;
   margin-top: 0;
+  
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .logo {
@@ -67,6 +71,18 @@ div {
 h1{
   color: #cbb080;
 }
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+
+
+main {
+  flex: 1; /* empuja el footer hacia abajo */
+}
+
 
 
 
