--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -75,4 +75,14 @@ nav ul li a:hover {
   }
 }
 
+.nav {
+  width: 100%;             /* 🔹 Asegura que ocupe todo el ancho */
+  max-width: 100%;         /* 🔹 Evita límites si hereda de un contenedor */
+  left: 0;
+  right: 0;
+  top: 0;
+  margin: 0;
+}
+
+
 
