--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -7,3 +7,21 @@
 margin-top: 50px; 
     
 }
+
+.products-container {
+  display: grid;
+  gap: 2rem;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+/* Pantallas grandes */
+@media (min-width: 1400px) {
+  .products-container {
+    grid-template-columns: repeat(4, 1fr);
+    max-width: 1400px;
+  }
+}
