--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,40 +1,17 @@
-.section-creaciones{
- margin-top: 20px;
+.section-creaciones {
+  margin-top: 30px;
 }
 
-.section-h1{
-
-margin-top: 50px; 
-    
+.section-h1 h1 {
+  text-align: center;
+  margin-bottom: 40px;
+  color: #cbb080;
+  font-weight: bold;
+  margin-top:50px ;
 }
 
 .products-container {
-  display: grid;
-  gap: 2rem;
+  display: flex;
   justify-content: center;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 1rem;
-}
-
-/* Pantallas grandes */
-@media (min-width: 1400px) {
-  .products-container {
-    grid-template-columns: repeat(4, 1fr);
-    max-width: 1400px;
-  }
-}
-
-.products-container {
-  display: grid;
-  gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  justify-items: center;
-  width: 100%;
-  max-width: 1800px; /* más grande */
-  margin: 0 auto;
-  padding: 2rem 4rem;
-  box-sizing: border-box;
 }
 
