--- a/src/components/FormContact/FormContact.css
+++ b/src/components/FormContact/FormContact.css
@@ -6,6 +6,7 @@
   border-radius: 12px;
   max-width: 500px;
   margin: 2rem auto;
+  margin-top: 6rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
 }
