--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 /* ===== FOOTER ===== */
 .footer {
   width: 100%;
-  background-color: #fffdf8;
+  background-color: #ebd9bb;
   color: #cbb080;
   margin-top: auto;
 }
@@ -16,16 +16,6 @@
   font-size: 1rem;
 }
 
-/* ===== ZÓCALO INFERIOR ===== */
-.footer-zocalo {
-  width: 100%;
-  background: linear-gradient(to right, #fbdbeb, #fbe9d0);
-  color: #704214;
-  font-size: 0.9rem;
-  padding: 0.8rem 0;
-  text-align: center;
-  letter-spacing: 0.5px;
-}
 
 /* ===== Responsive ===== */
 @media (max-width: 768px) {
@@ -34,8 +24,5 @@
     font-size: 0.9rem;
   }
 
-  .footer-zocalo {
-    font-size: 0.8rem;
-    padding: 0.6rem 0;
-  }
+  
 }
