--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -11,7 +11,22 @@
 }
 
 .products-container {
-  display: flex;
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
   justify-content: center;
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 1rem;
 }
 
+@media (min-width: 1600px){
+
+  .products-container{
+  max-width: 1600px;
+  grid-template-columns: repeat(4, 1fr);
+
+  }
+
+}
