Cambio estilo header-footer

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 /* ===== FOOTER ===== */
 .footer {
-  width: 100%;
+  width: 100vw;
   background-color: #ebd9bb;
   color: #cbb080;
   margin-top: auto;
