--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -76,9 +76,17 @@ nav a:hover {
   display: none;
   background: none;
   border: none;
+  outline: none;
   cursor: pointer;
   color: brown;
   z-index: 3000;
+}
+
+.menu-toggle:focus {
+outline: none;
+border: none;
+box-shadow: none;
+
 }
 
 /* ====== RESPONSIVE ====== */
