Estilos formulario contacto

--- a/src/App.css
+++ b/src/App.css
@@ -108,10 +108,10 @@ img {
     padding: 1rem;
   }
 
-  .form-contact {
+ /* .form-contact {
     max-width: 500px;
     margin: 0 auto;
-  }
+  }*/
 
   header, nav {
     padding: 0.75rem 1.5rem;
